--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
-language: c
-
-arch: 
+os: linux
+arch:
   - amd64
   - ppc64le
-
 script:
-  - ./autogen.sh
-  - ./configure
-  - make
-  - make check
-  - sudo make install
+   - make
+   - make test
